--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 
     height: 100vh;
     width: 100vw;
-    background-image: url(./imagenes_espacio/fondo\ espacial2.png);
+    background-image: linear-gradient(black, transparent, black), url(./imagenes_espacio/fondo\ espacial2.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -36,6 +36,7 @@ body{
 .borderleftright{
 
     position: relative;
+    overflow: hidden;
 
 }
 
@@ -45,19 +46,19 @@ body{
     height: 2%;
     background-color: var(--main-color);
     position: absolute;
+    content: '';
     bottom: 0px;
     left: 0px;
-    content: '';
-   
+    transform: translateX(-100%);
     transition: 0.2s all;
 }
 
 .borderleftright:hover::before{
-    transform: translate(0%) ;
+    transform: translateX(0%) ;
 }
 
 .bg-cta{
-    background-image: url(./imagenes_espacio/fondo\ estrellas.png);
+    background-image: linear-gradient(black, transparent, black), url(./imagenes_espacio/fondo\ estrellas.png);
 
     height: 100vh;
     width: 100vw;
@@ -86,12 +87,13 @@ body{
 
         linear-gradient(to top, var(--main-color) 2px, transparent 2px) 0 100%,
 
-        linear-gradient(to top, var(--main-color) 2px, transparent 2px) 100% 100%,
+        linear-gradient(to top, var(--main-color) 2px, transparent 2px) 100% 100%
 
     ;
 
     background-repeat: no-repeat;
     background-size: 8px 8px;
+    transition: 0.2s all;
 
 }
 
